@@ -1,3 +1,7 @@
+2012-02-23  Fridrich Strba
+
+		* CDR: 'outl' 'behind fill' flag.
+
 2012-02-22  Valek Filippov
 
 		* CDR: 'fild' gradients, 0x25 coords.
